force-app/main/default/objects/Table_Dealer_Portal__c/Table_Dealer_Portal__c.object-meta.xml
<CustomObject>
    <label>Table Dealer Portal</label>
    <nameField>
        <label>Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tables Dealer Portal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>