force-app/main/default/objects/Table_Dealer_Portal__c/fields/Key_Table__c.field-meta.xml
<CustomField>
    <fullName>Key_Table__c</fullName>
    <externalId>true</externalId>
    <label>Key Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>