force-app/main/default/objects/Table_Dealer_Portal__c/fields/SOQL_2__c.field-meta.xml
<CustomField>
    <fullName>SOQL_2__c</fullName>
    <label>SOQL 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>